[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/Menus/Characters/CharacterSelector.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Menus/Characters/CharacterCreator.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Components/ConfirmationPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Menus/Characters/CharacterMenu.gd" type="Script" id=6]

[node name="CharacterMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterSelector" parent="." instance=ExtResource( 1 )]

[node name="CharacterCreator" parent="." instance=ExtResource( 2 )]
visible = false

[node name="ConfirmationPopup" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="new_character_requested" from="CharacterCreator" to="." method="_on_CharacterCreator_new_character_requested"]
